test/test_suite/errors/error_decl_ok.c3
module errors;

optenum TheError
{
    A
}

optenum TheError2
{
    A,
    B
}

optenum TheError3
{
    C, D
}


